# DataEthicSecurity

./: .gitignore  README.md  analyze_results.py  generate_report.py  main.py  pyproject.toml  requirements.txt  run_full_pipeline.py  visualize_comparison.py
docs/: MIMIC_QUICKSTART.md
notebooks/: mia_pipeline.ipynb
results/: metadata.json
results/mimic_results/: REPORT.md  comparison.json
results/simple_results/: REPORT.md  comparison.json  metadata.json
src/: data_utils.py  download_mimic_data.py  evaluate.py  fine_tune_model.py  fine_tune_model_improved.py  generate_dataset.py  generate_synthetic_data.py  membership_inference.py  query_model.py  utils.py
