[project]
name = "dataethicsecurity-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=2.13.0",
    "matplotlib>=3.5.0",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.2.1",
    "torch>=2.2.0",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
